<resources>
    <string name="app_version">Version: 1.1</string>
    <string name="app_name">votar</string>
    <string name="action_settings">Settings</string>
    <!--MainActivivity-->

    <string name="BotonIngresar">Ingresar</string>
    <string name="BotonSaveNewPassWord">Almacenar Clave</string>
    <string name="logo">logo</string>

    <string name="asignacionConcejalMultiple">Tablet Asignada a Varios Concejales!!!</string>
    <string name="asignacionConcejalSinAsignar">Tablet NO Asignada</string>
    <string name="password">Clave</string>
    <string name="passwordConfirmation">Confirmacion de Clave</string>


    <string name="error_null_password">Clave Nula</string>
    <string name="error_too_short_password">Clave Muy Corta</string>
    <string name="error_password_iqual_default">Ingrese una clave distinta</string>
    <string name="error_invalid_password">Clave incorrecta</string>
    <string name="error_passwordDistintos">Las claves Ingresadas son diferentes</string>
    <string name="error_incorrect_password">Clave Incorrecta</string>


    <string name="passwor_configuracion">"pass"</string>
    <string name="password_default_key">"password_default_key"</string>
    <string name="password_default">"123abc"</string>

    <!--//Dialogo supero la cantidad de intentos para el Login-->
    <string name="password_Supero_Cantidad_Intentos_Titulo">"Supero la canitidad de Intentos."</string>
    <string name="password_Supero_Cantidad_Intentos_Texto">"Contacte al Operador para asignar una nueva clave si no la recuerda"</string>
    <string name="password_Supero_Cantidad_OK">"Ok"</string>


    <!--Actividad Votacion-->
    <string name="title_activity_votacion">VotacionActivity</string>
    <string name="boton_Voto_Positivo">Positivo</string>
    <string name="boton_Voto_Negativo">Negativo</string>
    <string name="texto_Voto_Positivo">Voto Positivo</string>
    <string name="texto_Voto_Abstencion">Abstención</string>
    <string name="texto_Voto_Negativo">Voto Negativo</string>
    <string name="boton_Confirma_Voto_Positivo">Confrima Voto Positivo</string>
    <string name="boton_Confirma_Voto_Negativo">Confirma Voto Negativo</string>
    <string name="boton_Cancelar">Cancelar</string>
    <string name="large_text">
        "<b>Material is the metaphor.</b>\n\n"

       <i> "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
</i>
        <u><b>"Bold, graphic, intentional.\n\n"</b>    </u>

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_configuracion">Configuracion</string>

    <!-- Strings related to Configuracion Activity -->
    <string name="mac">Mac</string>
    <string name="imei">Imei</string>
    <string name="Serie">Serie</string>
    <string name="Dispositivo">Dispositivo</string>
    <string name="ip">IP Base</string>
    <string name="NombreBase">Nombre Base</string>
    <string name="userBase">User Base</string>
    <string name="PasswordBase">Password Base</string>
    <string name="boton_registrarTablet">registrar Tablet</string>
    <!--Referencias de Preferencias-->

    <string name="boton_registrarBase">registrar Base</string>
    <string name="preference_registrado">com.ncodata.votar.registrado</string>
    <string name="preference_ip">com.ncodata.votar.ipbase</string>
    <string name="preference_NombreBase">com.ncodata.votar.nombrebase</string>
    <string name="preference_userBase">com.ncodata.votar.userbase</string>
    <string name="preference_PasswordBase">com.ncodata.votar.passwordbase</string>
    <string name="preference_Registrado_default">NO</string>
    <string name="preference_ip_default">192.168.0.6</string>
    <string name="preference_NombreBase_default">HCD</string>
    <string name="preference_userBase_default">hcd</string>
    <string name="preference_PasswordBase_default">d4k4r</string>
    <string name="title_activity_activar_aplicacion">ActivarAplicacion</string>
    <string name="ActivacionTitulo">Activación</string>
    <string name="ActivacionIngreseCodigo">Ingrese Código de Activación</string>
    <string name="ActivacionEquipoActivado">Equipo Activado</string>
    <string name="ActivacionSuperoElMaximo">la cantidad de instalaciones supero el máximo, Contacte a NCODATA</string>
    <string name="ActivacionCodigoIncorrecto">El codigo es Incorrecto</string>

</resources>
