<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ncodata.votar.ConfiguracionActivity">




    <ImageView
        android:id="@+id/inconoBaseDesonectada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_lock_open_black_24dp"
        android:layout_gravity="end"
        android:tint="@color/colorVotoNegativo"
        />
    <ImageView
        android:id="@+id/inconoBaseConectada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_lock_outline_black_24dp"
        android:layout_gravity="end"
        android:tint="@color/colorVotoPositivo"
        />


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/registro_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/registo_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
            android:id="@+id/mac_registo_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/mac"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/botonRegistarTablet"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/boton_registrarTablet"
                android:textStyle="bold" />



        </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/imei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imei"
                    android:maxLines="1"
                    android:enabled="false"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/serie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Serie"
                    android:maxLines="1"
                    android:enabled="false"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dispositivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Dispositivo"
                    android:maxLines="1"
                    android:enabled="true"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip"
                    android:maxLines="1"
                    android:enabled="true"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nombreBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NombreBase"
                    android:maxLines="1"
                    android:enabled="true"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userBase"
                    android:maxLines="1"
                    android:enabled="true"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PasswordBase"
                    android:maxLines="1"
                    android:enabled="true"
                    android:singleLine="true"  />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/botonRegistarBase"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/boton_registrarBase"
                android:textStyle="bold" />


            <Button
                android:id="@+id/apagar"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="apagar"
                android:textStyle="bold" />

        </LinearLayout>




    </ScrollView>
</LinearLayout>
